Remove ability to scroll on home page, fixes whitespace issues on mobile

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,9 +1,10 @@
 .home {
     position: absolute;
     top: 50px;
-    bottom: 0;
+    bottom: 0px;
     left: 0;
     right: 0;
+    overflow: hidden;
     background-image: url('../../images/homePageBackground.jpg');
     background-position: center;
     background-size: cover;
